--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -77,9 +77,74 @@
               ><b>Username: </b> <i>{{currentUser.username}}</i></a
             >
           </div>
-          <button class="btn btn-dark mt-2 float-right">Edit Details</button>
+          <button class="btn btn-dark mt-2 float-right" data-toggle="modal" data-target="#exampleModalCenter1">Edit Details</button>
         </div>
       </div>
+      <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Edit Profile</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                  <form>
+                      <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="inputEmail4">Firstname</label>
+                          <input class="form-control" placeholder="Firstname" />
+                        </div>
+                        <div class="form-group col-md-6">
+                          <label>Lastname</label>
+                          <input class="form-control" placeholder="Lastname" />
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputAddress">Address</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="inputAddress"
+                          placeholder="Address"
+                        />
+                      </div>
+                      <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="inputEmail4">Mobile number</label>
+                          <input
+                            type="email"
+                            class="form-control"
+                            id="inputEmail4"
+                            placeholder="Mobile number"
+                          />
+                        </div>
+                        <div class="form-group col-md-6">
+                          <label for="inputState">Department</label>
+                          <select id="inputState" class="form-control">
+                            <option>Department 1</option>
+                            <option>Department 2</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="inputAddress">Username</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Username"
+                          />
+                        </div>
+                    </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
 </div>
